syntax = "proto3";

package SdkProto;

/*********************  基础对象 ************************/
message User{
    optional string sessionId            = 1;
    optional int32 userId                = 2; //用户ID
    optional string nickname             = 3; //玩家昵称
    optional string headImg              = 4; //玩家头像
    optional int32 sex                   = 5; //玩家性别
    optional string openid               = 6;
    optional double diamond              = 7; //钻石
	optional double coin               	 = 8;//金币
    optional int32 ticket                = 9;
    optional double bankcoin			 = 10;
    optional string userName             = 11;
    optional string aliAccount           = 12;
    optional int32 userType              = 13;
    optional string aliName              = 14;
    optional string bankAccount          = 15;
    optional string bankName             = 16;
    optional string ip                   = 17;
    optional int32 bindStatus            = 18;
    optional string phone                = 19;
    optional int32 level    			 = 20;
    optional int32 isInTable			 = 21;
    optional string addr                 = 22;
    optional int32 gameId				 = 23;
    optional string pos                  = 24;
    optional bool showAd                 = 25;
    optional bool isNewUser              = 26;
    optional double registerCoin         = 27;
    optional double bindphoneCoin        = 28;
    optional double fissionCoin          = 29;
	optional int32 bannerAlert			 = 30;
	optional int32 agent                 = 31;
	optional int32 isBind                = 32;
	optional int32 isRecharge            = 33;
}


message UserInfo{
    optional int32 isInTable             = 1;
    optional string addr                 = 2;
    optional int32 baseBankCoin          = 3;
    optional float dailyRecharge         = 4;
    optional int32 dailyRechargeMax      = 5;
}

message UserReady {
	optional int32 userId				 = 1;
	optional int32 state				 = 2;
}

message ResultData {
	optional int32 isOver				 = 1;
	optional string time				 = 2;
	optional int32 winners				 = 3;//谁赢了 1：地主赢了 0：农民赢了
	optional int32 springInfo			 = 4;//春天信息 0：正常 1：春天 2：倒春	
}

/*********************  请求对象 ************************/
message LoginRequest
{
    optional string phoneOrUsername     = 1;//手机号
    optional string psword              = 2;//验证码
    optional string deviceID            = 3;//设备号
    optional int32 channelId            = 4;
    optional string agentCode           = 5;
    optional int32 platformId           = 6;
}

message RegisterPhoneRequest{
    optional string phone               = 1;
    optional string psword              = 2;
    optional string msgCode             = 3;
}

message GetUserInfoRequest{
    optional int32 userId              = 1;
}

message CoinBankRequest{
    optional int32 userId              = 1;
    optional int32 type                = 2;
    optional int32 coin                = 3;
}

message ChangeSignRequest{
    optional string sid                = 1;
    optional string sign               = 2;
}

message TestDeviceIDRequest{
    optional string deviceID           = 1;
    optional int32 channelId           = 2;
    optional int32 platformId          = 3;
    optional string agentCode          = 4;
}



//创建桌子
message CreateTableRequest {
	optional string sid                  = 1; //
	optional string tableId				 = 2; //桌子ID
	optional string gps					 = 3; //ip地址
}

//加入桌子
message JoinTableRequest {
	optional string sid                  = 1; //
	optional string tableId				 = 2; //桌子ID
	optional string gps					 = 3; //ip地址
}

//玩家准备
message UserReadyRequest {

}

//玩家出牌
message DisCardRequest {
	repeated int32 outCard				= 1; //出的牌
}

//玩家点过
message PassPaiRequest {

}

//抢地主请求
message UserQDZRequest {
	optional int32 score				= 1;
}

//明牌
message UserMPRequest {
	optional int32 showAll				= 1;
}

//重新连接 
message UserReconnectRequest {
      optional int32 userId            = 1; //
}

//申请解散牌桌
message ApplyDismissRequest {
	
}

//是否同意解散牌桌 
message AgreeDismissRequest {
      optional int32 agree             = 1;//1= 同意，2=不同意，3=申请
}

//玩家退出
message UserQuitRequest {

}

//聊天
message MessageRequest {
    optional string content          = 1;//聊天内容
    optional int32 toUserId          = 2;//目标用户（0表示自己） 
}

//用户退到后台
message UserOnBackRequest {
	optional int32 leaveState		 = 1;//0:在线,1:离线
}

//延时检测
message DelayCheckRequest {
      optional string content          = 1;//内容
}

//点击取消托管
message CancelAutoRequest {
	
}



//所有请求接口
message Request {
    enum CMD {
      UNKNOWN                      = 0;
      Login                        = 2000;   //CREATE_TABLE				   = 2000;	 创建桌子  CreateTableRequest, CreateTableResponse
      RegisterPhone                = 2002;   //JOIN_TABLE				   = 2002;	 //加入桌子 JoinTableRequest, JoinTableResponse
      GetUserInfo                  = 2003;   //SEND_JOIN_TABLE			   = 2003;	 //加入桌子返回消息 SendJoinTableResponse
	  CoinBank                     = 2004;   //
	  ChangeSign                   = 2005;   //
	  TestDeviceID                 = 2006;   //USER_READY				   = 2006;	 //玩家点击准备请求 UserReadyRequest
	  SEND_USER_READY			   = 2007;	 //玩家点击准备返回 SendUserReadyResponse
	  
	  SEND_CARDS				   = 2009;	 //推送给每个玩家发牌 SendCardsResponse
	  DIS_CARD					   = 2010;	 //玩家出牌 请求 DisCardRequest
	  SEND_DIS_CARD				   = 2011;	 //玩家出牌 返回 SendDisCardResponse
      PASS_PAI					   = 2022;	 //玩家点过请求 PassPaiRequest
	  SEND_PASS_PAI				   = 2023;	 //玩家点过返回 SendPassPaiResponse
      USER_RECONNECT               = 2030;   //玩家重连 UserReconnectRequest, UserReconnectResponse
	  SEND_RECONNECT_QUIT			= 2035;  //玩家重连回到大厅 SendReconnectQuitResponse
      SEND_USER_RECONNECT          = 2031;   //推送重连信息 SendUserReconnectResponse
	  
	  APPLY_DISMISS		           = 2040;	 //申请解散牌桌 ApplyDismissRequest
      SEND_APPLY_DISMISS    	   = 2041;	 //申请解散牌桌返回 SendApplyDismissResponse
	  AGREE_DISMISS     		   = 2042;	 //是否同意解散牌桌 AgreeDismissRequest
	  SEND_AGREE_DISMISS    	   = 2043;	 //是否同意解散牌桌推送 SendAgreeDismissResponse
	  SEND_DISMISS_RESULT		   = 2047;   //解散成功  推送 SendDismissResultResponse
	  
	  USER_QUIT					   = 2044;   //玩家退出 UserQuitRequest
	  SEND_USER_QUIT               = 2045;   //推送玩家退出 SendUserQuitResponse
	  
	  MESSAGE					   = 2060;   //聊天 MessageRequest
	  SEND_MESSAGE                 = 2061;   //推送聊天信息 SendMessageResponse
	  SEND_COIN_REFRESH            = 2062;  //推送金币刷新 SendCoinRefreshResponse
      USER_ONBACK                  = 2080;   //用户退到后台  UserOnBackRequest
      SEND_USER_ONBACK             = 2081;   //退到后台 SendUserOnBackResponse
	  
	  SEND_ROUND_RECORD			   = 2015;   //推送 回合结算 SendRoundRecordResponse
      USER_QDZ					   = 2100;	 //抢地主请求 UserQDZRequest
	  SEND_USER_QDZ				   = 2101;	 //强地主返回 SendUserQDZResponse
	  SEND_USER_QDZ2			   = 2102;	 //强地主2返回 SendUserQDZ2Response
	  
	  USER_MP					   = 2200;	 //玩家明牌  UserMPRequest
	  SEND_USER_MP				   = 2201;	 //明牌返回  SendUserMPResponse
	  SEND_USER_MP2				   = 2202;	 //明牌返回2  SendUserMP2Response
	  
      SEND_GAME_OVER			   = 2017;   //推送总结算 SendGameOverResponse
	  SEND_DIAMOND_CHANGE		   = 2071;   //推送钻石变化 SendDiamondChangeResponse
      
      USER_DAO_RECORD			   = 2083;	 //玩家刀的游戏记录 UserDaoRecordRequest, UserDaoRecordResponse
      
	  CANCEL_AUTO				   = 20012;	 //点击取消托管 CancelAutoRequest
	  SEND_CANCEL_AUTO			   = 20013;  //取消托管回复 SendCancelAutoResponse
      
      DELAY_CHECK                  = 20010;  //客户端延时检测  DelayCheckRequest, DelayCheckResponse 
      
      Get_User_Info				   = 2046;	 //获取同桌玩家信息
      
      SEND_NOTICE_CLIENT_DISMISS   = 21002;	 //通知玩家  SendNoticeClientDismissResponse
      
	  SEND_REMAIN_TIME			= 20015; //推送倒计时  SendRemainTimeResponse
	  SEND_USERQUIT_BY_ADMIN		= 21003; //通知客户端有人被后台踢出  SendUserQuitByAdminResponse

      SEND_HEART_BEAT				= 10000; //推送心跳 SendHeartBeatResponse
      
      
    }
    optional CMD   cmd                                      = 1;      //访问接口
    optional LoginRequest loginRequest                      = 11;     //optional CreateTableRequest createTableRequest			= 11;	  创建桌子
    optional RegisterPhoneRequest registerPhone             = 12;     //optional JoinTableRequest joinTableRequest      		= 12;     //加入桌子
    optional GetUserInfoRequest getUserInfoRequest          = 13;     //optional UserReadyRequest userReadyRequest				= 13;	  //玩家准备
    optional CoinBankRequest coinBankRequest                = 14;
    optional ChangeSignRequest changeSignRequest            = 15;     //optional DisCardRequest disCardRequest					= 15;	  //玩家出牌 请求
    optional TestDeviceIDRequest testDeviceIDRequest        = 16;     //optional UserQDZRequest userQDZRequest					= 16;	  //抢地主
    optional UserMPRequest userMPRequest					= 17;	  //明牌
    optional PassPaiRequest passPaiRequest					= 19;	  //玩家放弃操作请求
    optional UserReconnectRequest userReconnectRequest      = 20;     //重新连接
    optional ApplyDismissRequest applyDismissRequest 		= 21;	  //申请解散牌桌
    optional AgreeDismissRequest agreeDismissRequest 		= 22;	  //是否同意解散牌桌
    optional UserQuitRequest userQuitRequest                = 23;     //玩家退出
    optional MessageRequest messageRequest                  = 24;     //聊天
    optional UserOnBackRequest userOnBackRequest            = 25;     //用户切换到后台
    optional DelayCheckRequest delayCheckRequest            = 26;     //延时检测
    
    optional CancelAutoRequest cancelAutoRequest			= 27;	  //点击取消托管
    
    

	extensions 500 to 1000;
}


/*********************  返回数据 ************************/
//创建桌子返回
message LoginResponse {
	optional User user				= 1;
}

message RegisterPhoneRespone{
    optional int32 username         = 1;    //(user.getUserId() + 1) + (vector++);
}

message GetUserInfoResponse{
    optional UserInfo userInfo      = 1;
}

message CoinBankResponse{
}

message ChangeSignResponse{
}


message TestDeviceIDResponse{
}
//创建桌子返回
message CreateTableResponse {
	optional string tableId			= 1;// 桌子ID
	optional int32 gameId			= 2;// 游戏ID
	optional int32 state			= 3;//状态
	optional int32 owner			= 4;// 桌主ID
	optional int32 currentRound		= 5;// 当前回合数
	optional int32 totalRound		= 6;// 总回合数
	optional string gameInfo		= 7;// 游戏参数
	optional int32 applicant		= 8;
	optional int32 applyTime		= 9;
	optional int64 startApplyTime	= 10;
	
	repeated User users				= 11;
}

//加入桌子返回
message JoinTableResponse {
	optional string tableId			= 1;// 桌子ID
	optional int32 gameId			= 2;// 游戏ID
	optional int32 state			= 3;//状态
	optional int32 owner			= 4;// 桌主ID
	optional int32 currentRound		= 5;// 当前回合数
	optional int32 totalRound		= 6;// 总回合数
	optional string gameInfo		= 7;// 游戏参数
	optional int32 applicant		= 8;
	optional int32 applyTime		= 9;
	optional int64 startApplyTime	= 10;
	
	repeated User users				= 11; //其它用户状态信息
}

//加入桌子--推送信息
message SendJoinTableResponse {
	optional User user				= 1; 
}

//玩家点击准备--推送信息
message SendUserReadyResponse {
	 optional int32 userId			   = 1; //用户ID
	 optional int32 state			   = 2; //状态  
     repeated UserReady users          = 3; //其它用户状态信息
}

//推送给每个玩家发牌
message SendCardsResponse {
	 optional int32 zhuangPos			= 1;
	 optional int32 currentRound		= 2; // 当前回合数
	 optional int32 state				= 3;
	 optional int32 nextDiscardPos		= 4; //下一个操作人的位置
	 optional string gameInfo			= 5;
	 optional int32 totalRound			= 6;
	 
	 repeated User users				= 7;
	 
	 optional int32 piaoPai				= 8;
	 optional int32 piaoPaiPosition		= 9;
}

//玩家出牌--推送返回2011
message SendDisCardResponse {
	 optional int32 userId			   = 1;
	 repeated int32 handCards		   = 2;
	 repeated int32 outCards		   = 3;
	 repeated int32 changeCards		   = 4;
	 optional int32 nextPlayer		   = 5;
	 optional int32 lastPlayer		   = 6;
	 optional int32 currTimes		   = 7;
}

//玩家放弃操作返回
message SendPassPaiResponse {
	 optional int32 userId			   = 1;
	 optional int32 nextPlayer		   = 2;
	 optional int32 lastPlayer		   = 3;
}

//玩家重连回到大厅
message SendReconnectQuitResponse {
      optional int32 userId            = 1;
}

//重新连接返回 2030
message UserReconnectResponse {
	optional string tableId			 	= 1;
	optional int32 gameId				= 2;
	optional int32 state				= 3;
	optional int32 owner				= 4;
	optional int32 currentRound			= 5;
	optional int32 totalRound			= 6;
	optional string gameInfo			= 7;
	optional int32 applicant			= 8;
	optional int32 applyTime			= 9;
	optional int64 startApplyTime		= 10;
	
	optional int32 zhuangPos			= 11;
	optional int32 discardPos			= 12;
	optional int32 nextDiscardPos		= 13;
	optional int32 curQDZPos			= 14;//下一个抢地主为主
	optional int32 godCard				= 15;//癞子 
	repeated int32 leftCards			= 16;//三张底牌
	repeated int32 callScoreInfo		= 17;//抢地主状态
	optional int32 currBaseScore		= 18;//底分
	optional int32 currTimes			= 19;
	
	optional ResultData resultData		= 20;
	
	repeated User users			   	 	= 21;
	
	optional int32 beilv				= 22;
	optional int32 passPaiCount			= 23;
}

//推送重连信息2031
message SendUserReconnectResponse {
	optional int32 userId				= 1;
    optional int32 onLine				= 2;
}

//申请解散牌桌--推送返回2041
message SendApplyDismissResponse {
	optional int32 userId				= 1;
    optional int32 applicant			= 2;
    optional int32 agree				= 3;
    optional int32 applyTime			= 4;
	optional int64 startApplyTime		= 5;
}

//是否同意解散牌桌--推送返回2043
message SendAgreeDismissResponse {
	optional int32 agree				= 1;
	optional int32 userId				= 2;
	optional int32 applicant			= 3;
}

//牌桌解散结果--推送消息
message SendDismissResultResponse {
	optional int32 applicant			= 1;
    optional int32 res					= 2;
    optional int32 notAgreeUserId		= 3;//1是成功 0是不成功
}

//推送退出--消息
message SendUserQuitResponse {
	optional int32 userId			= 1;
	optional bool isOwnerQuit		= 2;//是不是桌主退出
	optional string nickname		= 3;
	optional int32 position			= 4;
	optional string message			= 5;
	optional string tableId			= 6;
}

//推送聊天内容
message SendMessageResponse {
	  optional int32 userId            = 1;
      optional string content          = 2;  
      optional int32 toUserId          = 3;
}

//推送金币刷新
message SendCoinRefreshResponse {
	optional int32 userId            = 1;
	optional int32 coin              = 2;
}

//退到后台
message SendUserOnBackResponse {
      optional int32 userId            = 1;
      optional int32 leaveState		   = 2;
}

//推送回合结算
message SendRoundRecordResponse {
	optional string tableId			 	= 1;
	optional int32 gameId				= 2;
	optional int32 state				= 3;
	optional int32 owner				= 4;
	optional int32 currentRound			= 5;
	optional int32 totalRound			= 6;
	optional string gameInfo			= 7;
	optional int32 applicant			= 8;
	optional int32 applyTime			= 9;
	optional int64 startApplyTime		= 10;
	
	optional int32 zhuangPos			= 11;
	optional int32 discardPos			= 12;// 出牌人位置 没有则为-1
	optional int32 nextDiscardPos		= 13;//下一个出牌玩家位置
	optional int32 curQDZPos			= 14;//下一个抢地主为主
	optional int32 godCard				= 15;//癞子 
	repeated int32 leftCards			= 16;//三张底牌
	repeated int32 callScoreInfo		= 17;//抢地主状态
	optional int32 currBaseScore		= 18;//底分
	optional int32 currTimes			= 19;
	
	optional int32 isOver				= 20;
	optional string time				= 21;
	optional int32 winners				= 22;//谁赢了 1：地主赢了 0：农民赢了
	optional int32 springInfo			= 23;//春天信息 0：正常 1：春天 2：倒春
	
	repeated User users					= 24;
}

//推送总结算
message SendGameOverResponse {
      optional int32 state             = 1;
      optional int32 owner             = 2;
      optional int32 totalRound        = 3;
      optional int32 currentRound      = 4;
      optional string time             = 5;
      optional int32 agId			   = 6;
	  optional int32 ruleId            = 7;
	  
      repeated User users              = 8;
}

//抢地主 返回
message SendUserQDZResponse {
	 optional int32 round					= 1;
	 optional int32 difen					= 2;
	 optional int32 score					= 3;
	 optional int32 position				= 4;
	 optional int32 nextPosition			= 5;
	 optional int32 lastPosition			= 6;
	 
	 optional int32 passPaiCount			= 7;
}

//抢地主2 返回
message SendUserQDZ2Response {
	 optional int32 round					= 1;
	 optional int32 difen					= 2;
	 optional int32 position				= 3;
	 optional int32 godCard					= 4;
	 repeated int32 leftCards				= 5;
	 repeated int32 lordHandCards			= 6;
}

//明牌返回
message SendUserMPResponse {
	optional int32 showAll					= 1;
	repeated int32 cards				 	= 2;
	optional int32 position					= 3;
	optional int32 currTimes				= 4;
}

//明牌2返回
message SendUserMP2Response {
	optional int32 round					= 1;
	optional int32 difen				 	= 2;
	optional int32 position					= 3;
	optional int32 godCard					= 4;
	repeated int32 leftCards				= 5;
	optional bool start						= 6;
}

//推送钻石变化
message SendDiamondChangeResponse {
      optional int32 userId            = 1;
      optional int32 diamond           = 2;
}

//取消托管回复
message SendCancelAutoResponse {
	 optional int32 userId			   = 1;
	 optional bool isAuto			   = 2;
}

//延时检测
message DelayCheckResponse {
      optional string content          = 1;
}

//通知玩家
message SendNoticeClientDismissResponse{
	  optional int32 userId			   = 1;
}

//倒计时
message SendRemainTimeResponse {
      optional int32 time			= 1;//剩余时间
      optional int32 type			= 2;
      optional int32 userId			= 3;
}
//通知玩家被后台踢出
message SendUserQuitByAdminResponse {
      optional int32 userId				= 1;
}

//心跳
message SendHeartBeatResponse {
	optional  int64 currentTime			= 1;
}


//所有应答接口
message Response {
    enum ErrorCode {
	OK = 200;
	DATA_CHECK_FAIL                     = 400; //数据校验失败
	USER_NO_EXSIT                       = 401;//用户不存在
	USER_EXSITS                         = 402;//用户已存在，不能重复注册
	PASSWORD_ERROR                      = 403;//"密码错误"
	CLIENT_ERROR                        = 404;//客户端代码错误
	USERNAME_NO_VALID                   = 405;//请输入合法的帐号（由4到12位的字母数字组成）
	PASSWORD_NO_VALID                   = 406;//请输入合法的密码（由6到20位的字母数字下划线组成）
	PASSWORD_NO_VALID_NOTSAME           = 444;//两次密码不一样
	SESSION_EXPIRE                      = 407;//session已过期
	APP_NO_EXSIT                        = 408;//应用不存在
	SIGN_ERROR                          = 409;//签名失败
	GET_SMS_FAILURE                     = 410;//获取短信验证码失败
    GET_SMS_TIME_FAILURE                = 443;                                   //请不要在一分钟内重复请求
    SMS_VERIFY_CODE_EXPIRE              = 411;                                   //短信验证码已过期
    SMS_VERIFY_CODE_ERROR               = 412;                                   //请输入正确的验证码
    MOBILE_FORMAT_ERROR                 = 413;                                   //请输入正确的手机号
    MOBILE_BINDED                       = 414;                                   //手机号已绑定
    APP_NOT_EXSIT                       = 415;                                   //应用不存在
    MOBILE_UNBOUND                      = 416;                                   //该手机号未绑定
    SMS_VERIFY_CODE_SENT                = 417;                                   //短信验证码已下发，请注意查收
    NICKNAME_NOT_NULL                   = 418;                                   //请输入昵称
    INPUT_MOBILE                        = 419;                                   //请输入手机号
    INPUT_USERNAME                      = 420;                                   //请输入帐号
    INPUT_PASSWORD                      = 421;                                   //请输入密码
    INPUT_SMS_CODE                      = 422;                                   //请输入6位数验证码
    //INPUT_PRICE_ERROR                 = 423;                                   //输入金额错误
    ORDER_NO_ERROR                      = 423;                                   //訂單不存在
    ORDER_REPEAT_ERROR                  = 424;                                   //不能重复下单
    WX_ACCESS_TOKEN_ERROR               = 425;                                   //获取accessToken失败
    OPERATION_FAILED                    = 426;                                   //操作失败
    DONOT_IS_ME                         = 427;                                   //不可绑定自己!
    BIND_CODE_ERROR                     = 428;                                   //邀请码有误!
    LOGIN_ERROR                         = 429;                                   //禁止登陆,请联系客服
    NOT_IN_AGENT                        = 430;                                   //不在牌友圈中
    EXIST_IN_AGENT                      = 431;                                   //已经在牌友圈中
    APPLY_IN_AGENT                      = 432;                                   //已经申请了，馆主大大快点通过啊~！
    AGENT_NOT_EXIST                     = 433;                                   //牌友圈不存在
    AGENT_NOT_MANAGER                   = 434;                                   //不是牌友圈管理员
    USER_NOT_APPLY                      = 435;                                   //玩家未申请加入该牌友圈
    //ADD_COIN_FAIL                     = 436;                                   //添加金币失败
    CARD_HAS_USED                       = 437;                                   //充值卡已经被使用过
    AGENT_MAX_COUNT                     = 438;                                   //牌友圈数量已达上限
    CREATE_THE_SAME_ERROR               = 439;                                   //不能创建相同的玩法
    RULE_NOT_HAVE                       = 440;                                   //玩法不存在
    SLOT_ALREADY_HAVE                   = 441;                                   //该位置有玩法

    PLAY_BACK_CODE_ERROR                = 450;                                   //回放码错误，请核对后重新输入！！


    SYSTEM_ERROR                        = 500;                                   //系统异常
    PLAY_DISK_ERROR                     = 600;                                   //金币不足
    EMAIL_ERROR                         = 601;                                   //请输入合法邮箱地址
    CONTENT_ERROR                       = 602;                                   //内容不能为空
    LENGTH_ERROR                        = 603;                                   //最大可输入120字
    PLAY_IN_GAME                        = 604;                                   //在游戏中不可以操作金库！
    HAS_ALIPAY_ACCOUNT                  = 605;                                   //该支付宝账号已绑定,请联系在线客服!
    HAS_BANK_ACCOUNT                    = 613;                                   //该银行卡已绑定,请联系在线客服
    HAS_PHONE_ACCOUNT                   = 614;                                   //该手机号已被绑定,请联系在线客服!

    CHANGE_ERROR                        = 606;                                   //提取金额必须大于100,并且为50的整数倍
    CHANGE_REFUND_ERROR                 = 607;                                   //退款失败，验证不通过

    BANK_COIN_ERROR                     = 608;                                   //游戏中无法存取金币~

    CHANGE_GAME_TURNOVER_ERROR          = 609;                                   //游戏内流水不足，提取金额必须小于游戏内总流水

    BIND_ALI_ERROR                      = 610;                                   //请先绑定支付宝账号
    BIND_BANK_ERROR                     = 611;                                   //请先绑定银行账号
    COIN_CANNOT_NULL                    = 612;                                   //金额不能为空
    PERSON_LOGIN_ERROR                  = 619;                                   //游客登录已关闭,请选择帐号登录

    }
    optional string msg                                     = 1 [default = "OK"];   // 表示本次请求状态
    optional ErrorCode code                                 = 2 [default = OK];   // 表示本次请求状态
    optional int64 serverTime                               = 3;                        // 服务器时间
    optional Request.CMD     cmd                            = 4;                        // 接口

    optional LoginResponse loginResponse	                = 11; 	//optional CreateTableResponse createTableResponse		= 11;						创建桌子返回
    optional RegisterPhoneRespone registerPhoneResponse     = 12;   //optional JoinTableResponse joinTableResponse			= 12;						//加入桌子返回
    optional GetUserInfoResponse getUserInfoResponse        = 13;   //optional SendJoinTableResponse sendJoinTableResponse	= 13;						//加入桌子--推送返回
    optional CoinBankResponse coinBankResponse              = 14;   //optional SendUserReadyResponse sendUserReadyResponse	= 14;						//玩家点击准备--推送返回2007
    optional ChangeSignResponse changeSignResponse          = 15;   //optional SendCardsResponse sendCardsResponse			= 15;						//推送给每个玩家发牌--推送2009
    optional SendDisCardResponse sendDisCardResponse		= 16;						//玩家出牌--推送返回2011
 	optional SendPassPaiResponse sendPassPaiResponse		= 17;						//玩家放弃操作返回
    optional SendUserQDZResponse sendUserQDZResponse		= 18;						//抢地主返回
    optional SendUserQDZ2Response sendUserQDZ2Response		= 19;						//抢地主2返回
    optional SendUserMPResponse sendUserMPResponse			= 20;						//明牌返回
    optional SendUserMP2Response sendUserMP2Response		= 21;						//明牌返回2
    
    optional SendRoundRecordResponse sendRoundRecordResponse	= 24;			//推送回合结算2015
    optional SendReconnectQuitResponse sendReconnectQuitResponse		= 25;							//推送重连回到大厅
    optional UserReconnectResponse userReconnectResponse    = 26;                       //推送玩家数据,返回当前用户桌子所有人信息 2030
    optional SendUserReconnectResponse sendUserReconnectResponse   = 27;				//推送玩家重新连接 2031
 	optional SendApplyDismissResponse sendApplyDismissResponse	= 28;					//申请解散牌桌--推送返回2041
 	optional SendAgreeDismissResponse sendAgreeDismissResponse	= 29;					//是否同意解散牌桌--推送返回2043
 	optional SendDismissResultResponse sendDismissResultResponse		= 30;			//牌桌解散结果--推送消息
    optional SendUserQuitResponse sendUserQuitResponse		= 31;                       //推送玩家退出
    optional SendMessageResponse sendMessageResponse        = 32;                       //推送聊天信息
    optional SendUserOnBackResponse sendUserOnBackResponse  = 33;                       //退到后台
    
    optional SendGameOverResponse sendGameOverResponse 		= 34;						//游戏完全结束
    
    optional SendDiamondChangeResponse sendDiamondChangeResponse  = 35;                 //推送钻石变化
    optional SendCancelAutoResponse sendCancelAutoResponse	= 36;						//取消托管回复 
    
    optional DelayCheckResponse delayCheckResponse          = 37;                       //延时检测
 	
 	
    
    optional SendRemainTimeResponse sendRemainTimeResponse			= 38;						//推送延时时间
    
	optional SendNoticeClientDismissResponse sendNoticeClientDismissResponse =39;		//通知玩家

	optional SendUserQuitByAdminResponse sendUserQuitByAdminResponse	= 40;							//通知被后台踢出
    optional SendCoinRefreshResponse sendCoinRefreshResponse			= 41;
    optional SendHeartBeatResponse sendHeartBeatResponse    = 233;                       //心跳
    
    extensions 500 to 1000;
}

